<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

   <com.google.android.material.card.MaterialCardView
       android:layout_width="match_parent"
       android:layout_height="190dp"
       app:cardCornerRadius="20dp">

       <ImageView
           android:id="@+id/sliderimage"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
            android:scaleType="centerCrop"
           android:src="@drawable/sale"
           tools:ignore="ContentDescription" />
   </com.google.android.material.card.MaterialCardView>

    <RelativeLayout
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:text="@string/shop_by_category"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1dp"
            android:text="@string/see_all"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_category_item"

            />

        <RelativeLayout
        android:layout_marginTop="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/shop_by_product"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:text="@string/see_all"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productRecycler"
        android:layout_marginTop="12dp"
        android:nestedScrollingEnabled="true"
        tools:listitem="@layout/layout_product_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />



    </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>

   
